<resources>

    <string name="app_name">Test App</string>
    <string name="current_user_preferences_id">CurrentUser</string>
    <string name="list_of_users_preferences_id">ListOfUsers</string>

    <!-- Main Activity-->
    <string name="main_activity_new_user_button_text">Register new user!</string>
    <string name="main_activity_current_user_info_button_text">Show current user info</string>
    <string name="main_activity_users_list_button_text">Show Users List</string>
    <string name="main_activity_buttons_separator_label_text">- or -</string>
    <string name="main_activity_textview_text">Current user: </string>
    <string name="main_activity_no_user_text">None</string>
    <string name="main_activity_new_user_registered">New user correctly registered</string>
    <string name="custom_bottom_sheet_behaviour">.ui.customcomponents.CustomBottomSheetBehaviour</string>

    <!-- New User Fragment-->
    <string name="new_user_fragment_title">Create New User</string>
    <string name="new_user_fragment_name_text_view">Name: </string>
    <string name="new_user_fragment_age_text_view">Age: </string>
    <string name="new_user_fragment_city_text_view">City: </string>
    <string name="new_user_frafgment_nickname_text_view">Alias: </string>
    <string name="new_user_fragment_save_button_text">Save user</string>
    <string name="new_user_fragment_show_empty_field_error">Please, fill all the fields for continue the registration</string>

    <!-- User Info Fragment -->
    <string name="user_info_fragment_title">Hi! I am %s</string>
    <string name="user_info_fragment_age">I am %s old </string>
    <string name="user_info_fragment_city">I live in the city of %s</string>
    <string name="user_info_fragment_alias">and I am also known as %s on different places</string>
    <string name="user_info_fragment_bottom_text">Maybe you have heard about me</string>
    <string name="user_info_fragment_no_current_user">Ooops! Not current user &#8230; yet</string>

    <!-- List of Users Fragment-->
    <string name="list_of_users_fragment_title">List of Users</string>
    <string name="list_of_users_fragment_error_retrieving_users">Error retrieving users</string>
</resources>
